--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,7 @@
       <% include partials/template/header.ejs %>
     <div class="container">
         <h3 class="center-align" style="margin-top:80px;">Shahid's resume</h3> 
-        <h6 class="center-align">Shahid is a computer programmer and he wants to program for the rest of his life.</h6>
+        <h6 class="center-align">Shahid is a computer programmer and he has full intention to program for the rest of his life.</h6>
         
         <div class="divider" style="margin: 80px 0px;"></div>
           
