--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -25,7 +25,7 @@
     <ul id="dropdown1" class="dropdown-content">
       <li class="blue"><a href="/ShahidKhan.pdf" target="_blank" style="color:black;">Download my resume</a></li>
     </ul>
-    <ul class="side-nav blue" id="mobile-demo">
+    <ul class="side-nav blue" id="mobile-demo" style="background-color:black;">
         <li><a href="/">Home</a></li>
         <div class="divider" style="margin: 0px 0px;"></div>
         <li><a href="/contact">Contact me</a></li>
