--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -23,7 +23,7 @@
         </nav>    
     </div>    
     <ul id="dropdown1" class="dropdown-content">
-      <li class="blue"><a href="/ShahidKhan.pdf" target="_blank" style="color:black;">Download my resume</a></li>
+      <li class="blue"><a href="/ShahidsResume.pdf" target="_blank" style="color:black;">Download my resume</a></li>
     </ul>
     <ul class="side-nav blue" id="mobile-demo" style="background-color:black;">
         <li><a href="/">Home</a></li>
