changes in resume page

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,7 @@
       <% include partials/template/header.ejs %>
     <div class="container">
         <h3 class="center-align" style="margin-top:80px;">Shahid's resume</h3> 
-        <h6 class="center-align">Shahid is a computer programmer and he has full intention to program for the rest of his life.</h6>
+        <h6 class="center-align">Shahid is a computer programmer and he intends to program for the rest of his life.</h6>
         
         <div class="divider" style="margin: 80px 0px;"></div>
           
@@ -66,8 +66,8 @@
         <div class="row">
         
             <div class="col s12 m11 offset-m1">
-                <h6><span style="font-size:20px; font-weight:600;">Computer Programmer</span>(Diploma)</h6>
-                <h6>Graduated with honours - 3.84/4.00</6>
+                <h6><span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> Computer Programmer</span>(Diploma)</h6>
+                <h6><i class="tiny material-icons">label</i> Graduated with honours - 3.84/4.00</6>
             </div>    
         </div>
 
@@ -80,12 +80,12 @@
             <div class="col m11 s12 offset-m1" style="">
                 <h6>
                     <span style="font-size:19px; font-weight:600;">
-                    Bachelor of Science in Information Technology 
+                    <i class="tiny material-icons">star</i> Bachelor of Science in Information Technology 
                     </span>
                 </h6>
                 (BS-IT)
                 <br>
-                CGPA 3.22/4.00
+                <i class="tiny material-icons">label</i> CGPA 3.22/4.00
             </div>
         </div>
 
