--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -6,7 +6,7 @@
                 <div class="row">
                 <div class="col m2 offset-m1">
                 <a href="/" class="brand-logo"><img src="/images/logo10.png" height=50></a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons" style="color:black;">menu</i></a>
                 </div>  
                 <div class="col m10 offset-m1">
                 <ul class="right hide-on-med-and-down" >
