Info change in index page

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -62,8 +62,8 @@
             <div class="col s12 m4 offset-m1 hide-on-small-only">
                 Jan 2014 - April 2016
             </div>
-        </div>
-        <div class="row">
+        <!-- </div>
+        <div class="row"> -->
         
             <div class="col s12 m11 offset-m1">
                 <h6><span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> Computer Programmer</span>(Diploma)</h6>
@@ -81,11 +81,9 @@
                 <h6>
                     <span style="font-size:19px; font-weight:600;">
                     <i class="tiny material-icons">star</i> Bachelor of Science in Information Technology 
-                    </span>
+                    </span> (BS-IT)
                 </h6>
-                (BS-IT)
-                <br>
-                <i class="tiny material-icons">label</i> CGPA 3.22/4.00
+                <h6><i class="tiny material-icons">label</i> CGPA 3.22/4.00</h6>
             </div>
         </div>
 
@@ -132,7 +130,7 @@
 
         <div class="row">
             <div class="col s12 m11 offset-m1">
-                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> www.servicesoft.ca</span>
+                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> <a href="http://www.servicesoft.ca" target="_blank">www.servicesoft.ca</a></span>
             </div>
         </div>
 
@@ -147,7 +145,7 @@
 
         <div class="row" style="margin-top:40px;">
             <div class="col s12 m11 offset-m1">
-                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> www.shahidahmedkhan.info</span>
+                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> <a href="http://www.shahidahmedkhan.info" target="_blank">www.shahidahmedkhan.info</a></span>
             </div>
         </div>
 
@@ -203,7 +201,7 @@
 
         <div class="row" style="margin-top:40px;">
             <div class="col s12 m11 offset-m1">
-                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> resume.shahidahmedkhan.info</span>
+                <span style="font-size:20px; font-weight:600;"><i class="tiny material-icons">star</i> <a href="https://shahids-resume.herokuapp.com">shahids-resume.herokuapp.com</a></span>
             </div>
         </div>
 
