--- a/app/views/partials/template/fixed_action_button.ejs
+++ b/app/views/partials/template/fixed_action_button.ejs
@@ -5,7 +5,7 @@
     <ul>
       <li><a href="https://ca.linkedin.com/in/shahid-khan-35307b111" target="_blank" class="btn-floating blue"><i class="fa fa-linkedin-square social-icon-small"></i></a></li>
       <li><a href="https://github.com/shahidahmad" target="_blank" class="btn-floating black"><i class="fa fa-github social-icon-small"></i></a></li>
-      <li><a href="http://www.shahidahmedkhan.info" target="_blank" class="btn-floating blue"><i class="fa fa-codepen social-icon-small"></i></a></li>
+      <li><a href="http://www.shahidahmedkhan.info" target="_blank" class="btn-floating blue"><i class="fa fa-address-card social-icon-small"></i></a></li>
       <li><a href="https://www.freecodecamp.com/shahidahmad" target="_blank" class="btn-floating black"><i class="fa fa-fire social-icon-small"></i></a></li>
     </ul>
 </div>
